# tavernmx

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.md  README.md  client-config.json  server-config.json  vcpkg.json
include/tavernmx/: client-rooms.h  client-ui.h  client-workers.h  client.h  connection.h  logging.h  messaging.h  platform.h  queue.h  ringbuffer.h  room.h  server-workers.h  server.h  shared.h  ssl.h  stack.h  util.h
src/client/: CMakeLists.txt  clientconfiguration.cpp  main.cpp  serverconnection.cpp  ui.cpp
src/client/client-ui/: chatwindow.cpp  connect.cpp  connecting.cpp  screen.cpp  ui.cpp
src/client/workers/: chatwindow-worker.cpp  connectscreen-worker.cpp  serverconnection-worker.cpp
src/server/: CMakeLists.txt  clientconnection.cpp  main.cpp  serverconfiguration.cpp
src/server/workers/: client-worker.cpp  server-worker.cpp
src/shared/: CMakeLists.txt  connection.cpp  logging.cpp  messaging.cpp  room.cpp  ssl.cpp  util.cpp
tests/: CMakeLists.txt  messagepacking.cpp  ringbuffer.cpp  util.cpp
